client/styles/function_group.css
#post #solutions .function-group-carrier {
    margin-top:26px; /* this is so they aren't on the same line as the problem number. 26 is the computed height of the question line. */
}
.function-group-carrier {
    position:relative;
    margin-bottom: -15px;
}

    .function-group-carrier > .function-group {
        position:relative;
        top:-15px;
        padding-top:15px;
        margin-bottom: -15px;
    }
        .function-group-carrier > .function-group > .group-item {
            margin-bottom: 15px;    
        }

.height-18 .group-item { height:18px; }
.height-26 .group-item { height:26px; }
.height-32 .group-item { height:32px; }
#appendix .function-group > * {
    margin-bottom:25px;
}

#post .function-group-count {
    font-weight:bold;
}

.function-group-carrier {
    display: inline-block;
    vertical-align: middle;
}

.function-group {
    display: inline-block;
    vertical-align: middle;
}
.function-group > * {
    margin-right: 15px;
}

.function-group > .group-item > .function-group-count {
    display: inline-block;
    min-width: 1em;
}
.function-group *  {
    white-space: nowrap;
}
.space-hack {
    font-weight: bold;
    visibility: hidden;
}

#appendix .diagram-by-example .function-group > * {
    margin-left: 1em;
}

@media only screen and (max-width: 800px) {
    #appendix .function-group-carrier {
        display: block;
    }
    #appendix .diagram-by-example {
        text-align: center;
    }
    #appendix .diagram-by-example > img {
        margin-bottom: 25px;
    }
    #appendix .diagram-by-example .function-group > * {
        margin-left: 7.5px;
        margin-right: 7.5px;
        text-align: left;
    }
}

.horizontal-group-4-break {
    width: 100%;
    max-width: 1220px;
}

@media only screen and (min-width: 576px) and (max-width: 767px)  {
    .horizontal-group-4-break {
        padding-left:10px;
        padding-right:10px;
    }
    .horizontal-group-4-break .horizontal-group {
        margin-top:0;
        margin-bottom:0;
    }
    .horizontal-group-4-break .horizontal-group:nth-child(1),
    .horizontal-group-4-break .horizontal-group:nth-child(2) {
        padding-top:0;
        padding-bottom: 1rem;
        border-top: none;
    }
    .horizontal-group-4-break .horizontal-group:nth-child(1),
    .horizontal-group-4-break .horizontal-group:nth-child(3) {
        padding-left:10px;
    }
    .horizontal-group-4-break .horizontal-group:nth-child(2),
    .horizontal-group-4-break .horizontal-group:nth-child(4) {
        padding-right:10px;
        border-left: 1px solid #abdde5 !important;
    }
    .horizontal-group-4-break .horizontal-group:nth-child(3),
    .horizontal-group-4-break .horizontal-group:nth-child(4) {
        padding-top: 1rem;
    }
}

@media only screen and (max-width: 575.5px) {
    .x-small-width-300{
        max-width: 300px;
    }
}

.diagram-by-example {
    display: inline-block;
}

.diagram-by-example > strong {
    display: block;
}

